<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">景区信息管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading_prompt">载入中...</string>
    <string name="login_prompt">景区信息管理</string>
    <string name="account">用户名</string>
    <string name="password">密&#160;码</string>
    <string name="login">登&#160;&#160;&#160;录</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="get_pass_back">密码找回</string>
    <string name="phone_prompt">绑定手机</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="ok2">确&#160;&#160;&#160;认</string>
    <string name="input_code">输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="wait_code">请等待</string>
    <string name="input_new_pass">输入新密码</string>
    <string name="input_repass">确认密码</string>
    <string name="account_null_prompt">请输入用户名</string>
    <string name="password_null_prompt">请输入密码</string>
    <string name="password_length_prompt">密码不能小于6位</string>
    <string name="phone_null_prompt">请输入手机号</string>
    <string name="phone_error_prompt">手机号有误</string>
    <string name="code_null_prompt">请输入验证码</string>
    <string name="newpass_null_prompt">请输入新密码</string>
    <string name="repass_null_prompt">请确认密码</string>
    <string name="repass_error_prompt">两次密码不一致</string>
    <string name="network_no_error_prompt">未检测到网络连接</string>
    <string name="network_error_try_again">网络异常，请检查网络后重试</string>
    <string name="back">返回</string>
    <string name="personal">个人中心</string>
    <string name="save">保存</string>
    <string name="delete">删&#160;&#160;除</string>
    <string name="user_rating">用户等级：</string>
    <string name="last_login_info">最近登录信息&#160;&#160;&#160;</string>
    <string name="scenic_map_manage">景区地图管理</string>
    <string name="feedback">意见反馈</string>
    <string name="edit_user_pass">修改账户密码</string>
    <string name="unlogin">退出登录</string>
    <string name="my_nick">我的昵称</string>
    <string name="my_email">我绑定的邮箱</string>
    <string name="my_phone">我绑定的手机</string>
    <string name="photograph">拍照</string>
    <string name="choose_pic">从相册选择</string>
    <string name="binding_phone_number">绑定手机号码</string>
    <string name="input_new_phone">请输入新绑定手机</string>
    <string name="input_current_phone">请输入绑定手机</string>
    <string name="ok_update">确认更换</string>
    <string name="old_epass">原密码</string>
    <string name="new_epass">新密码</string>
    <string name="ok_edit_pass">确认修改密码</string>
    <string name="feedback_prompt">用着不爽，随便说两句。</string>
    <string name="submit_feed">提交意见</string>
    <string name="home">首页&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="setting">设置</string>
    <string name="for_baidu_map">百度地图标注景点</string>
    <string name="for_scenic_map">景区地图标注景点</string>
    <string name="taged">已标注景点</string>
    <string name="my_info">我的资料</string>
    <string name="change_logo">更换头像</string>
    <string name="edit_nick">更改昵称</string>
    <string name="edit_phone">修改绑定</string>
    <string name="input_nick">请输入昵称</string>
    <string name="submit_edit_nick_error">您的昵称没有变化</string>
    <string name="input_old_pass">请输入原密码</string>
    <string name="input_scenic_name">请在下框中输入景点名称:</string>
    <string name="current_scenic_info">当前景点信息</string>
    <string name="scenic_spot_id">景点编号</string>
    <string name="scenic_spot_name">景点名称</string>
    <string name="scenic_spot_lat">纬度：</string>
    <string name="scenic_spot_lon">经度：</string>
    <string name="tagging_methods">标注方式</string>
    <string name="tagging_binding_status">绑定状态</string>
    <string name="tagging_methods_single">标注方式：景点标注</string>
    <string name="save_scenic_spot_info">保存景点信息</string>
    <string name="delete_scenic_spot">删除景点</string>
    <string name="tagging_again">重新标注</string>
    <string name="binding_again">重新绑定</string>
    <string name="show_scenic_spot_by_list">景点列表</string>
    <string name="choose_scenic_spot_marking">请选择你要使用的标注方式</string>
    <string name="marking_type_spot">景点</string>
    <string name="marking_type_path">道路</string>
    <string name="marking_type_region">区域</string>
    <string name="edit_info">信息修改</string>
    <string name="scenic_spot_info">景点信息</string>
    <string name="upload_date">上传日期</string>
    <string name="choose_floder">文件浏览</string>
    <string name="no_sdcard">未检测到SD卡</string>
    <string name="file_back_error">已经是根目录了</string>
    <string name="choose_picture">图片浏览</string>
    <string name="determine_the_upload">确认上传</string>
    <string name="determine_the_save_scenic_info">&#160;&#160;绑&#160;&#160;定&#160;&#160;</string>
    <string name="delete_point">&#160;&#160;删&#160;&#160;除&#160;&#160;</string>
    <string name="no_map_and_upload">您还没有上传景区相应的地图，请选择要上传的景区地图。</string>
    <string name="tips">小提示：\n1.图片单张支持3M以下，超过系统会自动压缩\n2.自动压缩可能会使图片失真\n3.支持图片格式：jpg、jpeg、png</string>
    <string name="upload_map">上传地图</string>
    <string name="map_edit_point">地图标点</string>
    <string name="map_bind_point">绑定或删除</string>
    <string name="map_clear_point">清除</string>
    <string name="current_binding_info">当前绑定景点信息</string>
    <string name="soft_info">软件功能</string>
    <string name="system_feedback">系统问题与反馈</string>
    <string name="search_verson">版本查询</string>
    <string name="help">使用帮助</string>
    <string name="prompt_to_exit">再按一次退出应用</string>
    <string name="funtion_1">一个景点进行多处标记</string>
    <string name="funtion_2">一处景点多个坐标进行标注，确定景点范围</string>
    <string name="funtion_3">景区图上传，标注信息</string>
    <string name="funtion_4">地图定位标注采集信息</string>
    <string name="funtion_5">绑定手机，确保您信息数据安全</string>
    <string name="funtion_6">设置头像，给用户一点DIY空间</string>
    <string name="funtion_7">意见反馈，您的吐槽我们的进步</string>
    <string name="funtion_8">使用帮助，哪里不会点那里~So easy!</string>
    <string name="pass_back">密码找回</string>
    <string name="new_scenic_spot">标注新景点</string>
    <string name="bind_scenic_spot">绑定新景点</string>
    <string name="upload_scenic_map">上传景区地图</string>
    <string name="system_error_prompt">系统异常，请重新操作</string>
    <string name="get_data_error_prompt">暂无标注的景点，请尽快标注！</string>
    <string name="head_cutting">裁剪头像</string>
    <string name="login_error_prompt">用户名或密码错误</string>
    <string name="request_error_prompt">访问失败，请稍后重试</string>
    <string name="bind_prompt_is_bind">此景点已绑定，请选未绑定景点</string>
    <string name="bind_prompt_no_bind">绑定需要指定景点</string>
    <string name="request_success_prompt">删除成功!</string>
    <string name="resetpass_error_prompt">密码重置失败，请核对信息后重试</string>
    <string name="resetpass_error_phone">手机号绑定失败，请核对信息后重试</string>
    <string name="get_code_error_prompt">验证码获取失败，请重试</string>
    <string name="resetpass_success_prompt">密码重置成功，请重新登陆</string>
    <string name="feedback_none_prompt">-_-# 无字天书功能正在研发中，亲，请说话</string>
    <string name="feedback_success_prompt">感谢您的反馈，我们会尽快处理</string>
    <string name="binding_phone_success_prompt">手机绑定成功</string>
    <string name="dialog_ok">&#160;&#160;是&#160;&#160;</string>
    <string name="dialog_cancel">&#160;&#160;否&#160;&#160;</string>
    <string name="upload_map_failure_prompt">景区图上传失败</string>
    <string name="upload_map_head_prompt">头像上传失败</string>
     <string name="upload_map_number_prompt">最多标注5个点</string>
    <string name="cancel_marker_prompt">你当前的操作尚未完成，取消将丢失刚才的数据，是否取消？</string>
    <string name="dialog_ahead">&#160;&#160;是&#160;&#160;</string>
    <string name="upload_attrect_info_success">景点信息上传成功</string>
    <string name="dialog_marking">&#160;&#160;&#160;&#160;标&#160;&#160;记&#160;&#160;&#160;&#160;</string>
    <string name="dialog_success">&#160;&#160;&#160;&#160;完&#160;&#160;成&#160;&#160;&#160;&#160;</string>
    <string name="please_go_next">前往下个标记点……</string>
    <string name="binded">已绑定</string>
    <string name="unbind">未绑定</string>
    <string name="binding_success_prompt">信息绑定成功</string>
    <string name="del_binding_success_prompt">信息解绑成功</string>
    <string name="many_marking_err_prompt">多点标注不能少于三个</string>
    <string name="new_version_prompt">是要立即为您下载更新吗？</string>
    <string name="no_new_version">当前已是最新版本</string>
    <string name="attract_search_tip">请在此输入景点名称</string>
    
     <item type="id" name="tag_bind"></item>

</resources>