<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="40dp" >

            <ImageView
                android:id="@+id/forgetpass_user_logo_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="3dp"
                android:paddingTop="25dp"
                android:src="@drawable/logo_forgetpass" />

            <TextView
                android:id="@+id/forgetpass_user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/get_pass_back"
                android:textColor="@color/white"
                android:textSize="@dimen/login_prompt_text_size" />

            <EditText
                android:id="@+id/forgetpass_user_name_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_forgetpass_user"
                android:hint="@string/account" />

            <EditText
                android:id="@+id/forgetpass_user_phone_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_forgetpass_phone"
                android:hint="@string/phone_prompt"
                android:inputType="phone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="8dp" >

                <Button
                    android:id="@+id/getcode_btn"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_getcode_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/get_code"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/forgetpass_user_code_et"
                    style="@style/EdtiText"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/getcode_btn"
                    android:drawableLeft="@drawable/icon_forgetpass_pass"
                    android:hint="@string/input_code" />
            </RelativeLayout>

            <EditText
                android:id="@+id/forgetpass_user_pass_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_forgetpass_pass"
                android:hint="@string/input_new_pass"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/forgetpass_user_repass_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_forgetpass_pass"
                android:hint="@string/input_repass"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/forgetpass_ok_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_ok_selector"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_button_text_size" />

                <Button
                    android:id="@+id/forgetpass_cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel_selector"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_button_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/view_loading" />

</FrameLayout>