<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background" >

    <TextView
        android:id="@+id/title_bar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/personal"
        android:textColor="@color/white"
        android:textSize="@dimen/login_button_text_size" />

    <TextView
        android:id="@+id/title_left_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:drawableLeft="@drawable/btn_back_selector"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="@color/text_selector"
        android:textSize="14sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/title_right_btn"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_right_selector"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="invisible" />

</RelativeLayout>